# parley-tui

./: .gitignore  Cargo.toml  README.md  build.sh
.claude/skills/release/: SKILL.md
packaging/: homebrew-tap-README.md  make-dmg.sh  release.sh
src/: app.rs  broker.rs  config.rs  hygiene.rs  keys.rs  lib.rs  main.rs  pending.rs  pty.rs  router.rs  timeline.rs  ui.rs
src/headless/: discovery.rs  hub.rs  mod.rs  peer.rs  proxy.rs  wrapper.rs
tests/: broker_e2e.rs  broker_integration.rs  pty_integration.rs
