[package]
name = "parley-tui"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "parley"
path = "src/main.rs"

[[bin]]
name = "spike"
path = "src/bin/spike.rs"

[[bin]]
name = "hub_spike"
path = "src/bin/hub_spike.rs"

[[bin]]
name = "proxy_spike"
path = "src/bin/proxy_spike.rs"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = "0.4.45"
http = "1.4.2"
portable-pty = "0.9.0"
ratatui = "0.30.1"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net"] }
toml = "1.1.2"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
libc = "0.2"
tempfile = "3.27.0"
tui-term = "0.3.4"
unicode-width = "0.2.2"
vt100 = "0.16.2"

[dev-dependencies]
reqwest = { version = "0.13.4", features = ["json", "blocking"] }
tempfile = "3.27.0"
